--- a/.github/workflows/prod-api-CI.yml
+++ b/.github/workflows/prod-api-CI.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    environment: prod-api
+    environment: prod
 
     steps:
       - uses: actions/checkout@v3
