--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,11 +1,10 @@
 # docker-compose-dev.yml
-version: "3.8"
-
 services:
   api-server:
     image: sailin1367/napzak-api-dev:latest
     container_name: napzak-api-dev
     ports: ["8080:8080"]
+    pull_policy: always
     depends_on:
       redis: { condition: service_healthy }
       rabbitmq: { condition: service_healthy }
@@ -15,6 +14,7 @@ services:
     image: sailin1367/napzak-chat-dev:latest
     container_name: napzak-chat-dev
     ports: ["8081:8080"]
+    pull_policy: always
     depends_on:
       redis: { condition: service_healthy }
       rabbitmq: { condition: service_healthy }
