--- a/.github/workflows/prod-api-CD.yml
+++ b/.github/workflows/prod-api-CD.yml
@@ -33,10 +33,11 @@ jobs:
           printf '%s' "${{ secrets.API_FIREBASE_JSON_B64 }}" | base64 -d \
             > api-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
 
-      - name: Configure AWS credentials with OIDC
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_OIDC_ROLE_ARN }}
+          aws-access-key-id: ${{ secrets.API_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.API_SECRET_KEY }}
           aws-region: ap-northeast-2
 
       - name: Login to Amazon ECR
